--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,10 +1,14 @@
-<h1>Restaurants</h1>
+<h1>Notre séléction de restaurants</h1>
 
-<h2><% @restaurants.each do |restaurant| %></h2>
+<ul>
+<% @restaurants.each do |restaurant| %>
 
-<h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
+<li> <%= link_to restaurant.name, restaurant_path(restaurant)%> </li>
+<p><%= restaurant.address %>. tél: <%= restaurant.phone_number %></p>
+<p>Type de cuisine: <%= restaurant.category %></p>
+<% end %>
+</ul>
 
-<h4><%= restaurant.address %></h4>
-<h4><%= restaurant.phone_number %></h4>
-<h5><%= restaurant.category %></h5>
-<%end %>
+<%= Restaurant.categories.each do |category| %>
+<%= link_to category, restaurants_path(category: category) %>
+<% end  %>
