--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,8 @@
+<h1>New review for <%= @restaurant.name %></h1>
 
 <%= simple_form_for [@restaurant, @review] do |f| %>
   <%= f.input :content %>
   <%= f.input :rating, collection: Review::ACCEPTED_RATING, prompt: "Choose a rating please" %>
   <%= f.submit "add a review", class: "btn btn-primary" %>
 <% end %>
+
